--- a/src/main/webapp/style.css
+++ b/src/main/webapp/style.css
@@ -3,6 +3,8 @@
     Author     : simon
 */
 
+@import url('https://fonts.googleapis.com/css2?family=Nunito+Sans&display=swap');
+
 * {
     box-sizing: border-box;
 }
@@ -10,7 +12,7 @@
 body {
     margin: 0px;
     padding: 0px;
-    font-family: 'Lucida Sand-serif';
+    font-family: 'Nunito Sans', sans-serif;
     background-color: #efefef;
 }
 
@@ -20,7 +22,6 @@ body {
     align-content: center;
     justify-content: center;
     align-items: center;
-    justify-items: center;
 }
 
 h1{
@@ -33,7 +34,6 @@ form {
     align-content: space-between;
     justify-content: space-between;
     align-items: center;
-    justify-items: center;
     background-color: #ffffff;
     border-radius: 4px;
 }
@@ -44,7 +44,6 @@ form {
     align-content: stretch;
     justify-content: space-around;
     align-items: stretch;
-    justify-items: space-around;
 }
 
 label {
@@ -73,4 +72,32 @@ input, select {
 
 .list-container>p:nth-child(odd) {
     background-color: #cdcdcd;
+}
+
+button {
+    margin: 0px;
+    padding: 0.5em;
+    background-color: #1212FF;
+    color: #ffffff;
+    letter-spacing: 0.1em;
+    font-weight: 600;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+}
+
+button:hover {
+    background-color: #4545FF;
+}
+
+#file-form {
+    min-width: 60%;
+}
+
+#xml-group {
+    min-width: 80%;
+}
+
+#xml-input {
+    min-width: 80%;
 }
